--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
                 <category android:name="android.intent.category.BROWSABLE"/>
 
                 <data
-                    android:host="@string/host_url"
+                    android:host="www.randygo.tk"
                     android:scheme="http"/>
             </intent-filter>
         </activity>
